# MIC-for-learning

./: .gitignore  CMakeLists.txt  run_all.sh  setup.sh  test_cuda_kernel  test_cuda_kernel.cpp
doc/: CodeGenerator.zh-CN.rst  MIRLangRef.zh-CN.rst  TableGenFundamentals.zh-CN.rst  WritingAnLLVMBackend.zh-CN.rst  ai_compiler.md  compilier_back_end.md  iree.md  mlir.md  proj_arc.md  模型到mlir.md  源码精读_核心流程与C++要点.md  算子.md  项目架构与代码导读_MLIR_CUDA_TensorRT.md  高层算子图优化.md
doc/iree_docs/: index.md  iree_compiler_pipelin.md
doc/iree_docs/developers/: lowering-config.md
doc/iree_docs/developers/general/: developer-overview.md
doc/iree_docs/guides/deployment-configurations/: index.md
doc/iree_docs/guides/ml-frameworks/: index.md  jax.md  onnx.md  pytorch.md  tensorflow.md  tflite.md
doc/iree_docs/reference/: optimization-options.md  tuning.md
doc/iree_docs/reference/mlir-dialects/: index.md
doc/iree_docs/reference/mlir-passes/: index.md
include/MIC/CUDA/: CUDAKernel.h  LayerNormPlugin.h
include/MIC/Dialect/: NNDialect.cpp.inc  NNDialect.h  NNInterfaces.cpp.inc  NNInterfaces.h  NNInterfaces.h.inc  NNInterfaces.td  NNOps.cpp.inc  NNOps.h  NNOps.h.inc  NNOps.td
include/MIC/Passes/: Passes.h
include/MIC/TensorRT/: NetworkConverter.h  TensorRTBuilder.h
lib/: CMakeLists.txt
lib/CUDA/: CMakeLists.txt  CUDAKernel.cu  LayerNormPlugin.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/NN/: CMakeLists.txt  NN.cpp  NNOps.cpp
lib/Passes/: CMakeLists.txt  ConstantFoldPass.cpp  FusionPass.cpp  LayoutTransformPass.cpp  NNToRuntimeLoweringPass.cpp  PipelineLoweringPasses.cpp
lib/TensorRT/: CMakeLists.txt  NetworkConverter.cpp  TensorRTBuilder.cpp
models/: coverage_all_passes.mlir
scripts/benchmark/: benchmark.py
scripts/utils/: onnx_to_mlir.sh  run_mlir2trt_safe.sh  test_pipeline.py
testmodels/: README.md  matmul_bias_relu_elementwise.onnx.data  matmul_bias_relu_elementwise.ts  matmul_bias_relu_elementwise_dispatch_graph.dot  matmul_bias_relu_elementwise_onnx.mlir  matmul_bias_relu_elementwise_onnx.vmfb  matmul_bias_relu_elementwise_turbine.mlir  matmul_bias_relu_elementwise_turbine.vmfb  matmul_bias_relu_elementwise_turbine_after_dispatch_creation.mlir  matmul_bias_relu_elementwise_turbine_after_torch_input.mlir  models_resnet.py  simple_pytorch_matmul_bias_relu_elementwise.py
tools/: CMakeLists.txt
tools/mlir2trt/: CMakeLists.txt  mlir2trt.cpp
